--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,7 @@ LICENSE file.
     <script src="popup.js"></script>
   </head>
   <body>
+    <div>Hello World</div>
     <div id="accept_lang">
       <span id="languageSpan"></span>
     </div>
