--- a/popup.html
+++ b/popup.html
@@ -13,10 +13,10 @@ LICENSE file.
         width: 300px;
       }
     </style>
-    <script src="popup.js"></script>
+    <script src="src/popup.js"></script>
   </head>
   <body>
-    <div>Hello World</div>
+    <button onclick="test()">click me</button>
     <div id="accept_lang">
       <span id="languageSpan"></span>
     </div>
