--- a/background.html
+++ b/background.html
@@ -21,6 +21,8 @@ LICENSE file.
   </head>
   <body onload="getEventList()">
     <button id="getEvents">GET EVENTS</button>
+    <ul id="event-list">
+    </ul>
 
 
 
